@@ -1,3 +1,2 @@
-nix-shell ~/Documents/nixos/shellscripts/java.nix --run \
-"codium --ozone-platform=wayland --disable-gpu-sandbox"
+nix-shell ~/Documents/nixos/shellscripts/java.nix --run "codium --ozone-platform=wayland --enable-native-access=javafx.graphics"
 
